GRADLE-591 - Added Logger interface, which extends slf4j's Logger interface. - Changed Project.logger and Task.logger to return this Logger. - Changed a bunch of places to use Logger instead of logback, LogLevel, and the marker constants on Logging. - Ant and ivy logging now end up in ant- and ivy- specific log categories - Bridge java util logging to slf4j - Removed commons-logging from gradle libs, it is provided by jcl-over-slf4j - Added more checks to the logging int test - Reworked the samples in the logging user guide chapter
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1752 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/logging/project2/build.gradle
+++ b/src/samples/logging/project2/build.gradle
@@ -1,7 +1,7 @@
 dependsOn(':project1')
-println(prefix + 'quietProject2Out')
+println('quietProject2Out')
 
 buildscript {
-    println(prefix + 'quietProject2ScriptClassPathOut')
-    logger.info(prefix + 'infoProject2ScriptClassPathOut')
+    println('quietProject2ScriptClassPathOut')
+    logger.info('infoProject2ScriptClassPathOut')
 }
