--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,7 @@ dependencies {
             "org.apache.ant:ant:1.7.0@jar",
             "ch.qos.logback:logback-classic:0.9.9@jar",
             "org.slf4j:slf4j-api:1.5.3@jar",
+            "org.slf4j:jul-to-slf4j:1.5.3@jar",
             "ch.qos.logback:logback-core:0.9.9@jar",
             "commons-io:commons-io:1.4@jar",
             "commons-lang:commons-lang:2.3@jar",
@@ -133,6 +134,8 @@ dependencies {
             "biz.aQute:bndlib:0.0.255@jar",
             "org.apache.maven:maven-ant-tasks:2.0.9@jar",
             "asm:asm-all:2.2.3@jar"
+
+    runtime "org.slf4j:log4j-over-slf4j:1.5.3@jar", "org.slf4j:jcl-over-slf4j:1.5.3@jar"
     
     compile module("org.codenarc:CodeNarc:0.6") {
         dependency("org.slf4j:log4j-over-slf4j:1.5.3@jar")
@@ -147,7 +150,10 @@ dependencies {
         dependency("antlr:antlr:2.7.7")
         dependency("org.slf4j:jcl-over-slf4j:1.5.3@jar")
         dependency("com.google.collections:google-collections:0.9")
-        dependency("commons-beanutils:commons-beanutils-core:1.7.0")
+        module("commons-beanutils:commons-beanutils-core:1.7.0") {
+            dependency("commons-collections:commons-collections:2.0")
+            dependency("org.slf4j:jcl-over-slf4j:1.5.3@jar")
+        }
     }
 
     def FIRST_LEVEL_JMOCK = ['org.hamcrest:hamcrest-core:1.1@jar', 'org.hamcrest:hamcrest-library:1.1@jar', 'org.jmock:jmock-junit4:2.4.0@jar']
