--- a/src/samples/logging/project1/build.gradle
+++ b/src/samples/logging/project1/build.gradle
@@ -1,23 +1,50 @@
-logger.info(Logging.QUIET, prefix + "quietLog")
-logger.info(Logging.LIFECYCLE, prefix + "lifecycleLog")
-logger.info(prefix + "infoLog")
-logger.debug(prefix + "debugLog")
-logger.warn(prefix + "warnLog")
-logger.error(prefix + "errorLog")
-println(prefix + 'quietOut')
-captureStandardOutput(LogLevel.INFO)
-println(prefix + 'infoOut')
+// START SNIPPET use-logger
+logger.quiet('An info log message which is always logged.')
+logger.error('An error log message.')
+logger.warn('A warning log message.')
+logger.lifecycle('A lifecycle info log message.')
+logger.info('An info log message.')
+logger.debug('A debug log message.')
+logger.trace('A trace log message.')
+// END SNIPPET use-logger
+
+// START SNIPPET use-println
+println 'A message which is logged at QUIET level'
+// END SNIPPET use-println
+
+// START SNIPPET capture-stdout
+captureStandardOutput LogLevel.INFO
+println 'A message which is logged at INFO level'
+// END SNIPPET capture-stdout
 
 task logLifecycle << {
-    println(prefix + 'lifecycleTaskOut')
+    println('A task message which is logged at LIFECYCLE level')
 }
 logLifecycle.captureStandardOutput(LogLevel.LIFECYCLE)
 
+// START SNIPPET task-capture-stdout
 task logInfo << {
-    println(prefix + 'infoTaskOut')
+    println 'A task message which is logged at INFO level'
 }
 logInfo.captureStandardOutput(LogLevel.INFO)
+// END SNIPPET task-capture-stdout
 
 task log(dependsOn: [logInfo, logLifecycle]) << {
-    println(prefix + 'quietTaskOut')
+    println('A task message which is logged at QUIET level')
 }
+
+ant.echo('An info message logged from Ant')
+
+// START SNIPPET use-slf4j
+org.slf4j.Logger slf4jLogger = org.slf4j.LoggerFactory.getLogger('some-logger')
+slf4jLogger.info('An info log message logged using SLF4j')
+// END SNIPPET use-slf4j
+
+org.apache.commons.logging.Log jclLogger = org.apache.commons.logging.LogFactory.getLog('some-logger')
+jclLogger.info('An info log message logged using JCL')
+
+org.apache.log4j.Logger log4jLogger = org.apache.log4j.Logger.getLogger('some-logger')
+log4jLogger.info('An info log message logged using Log4j')
+
+java.util.logging.Logger julLogger = java.util.logging.Logger.getLogger('some-logger')
+julLogger.info('An info log message logged using JUL')
