GRADLE-287 Added a Scala plugin. Patch provided by Ross Black.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1754 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/toplevel/plugin.properties
+++ b/src/toplevel/plugin.properties
@@ -7,3 +7,4 @@ jetty=org.gradle.api.plugins.jetty.JettyPlugin
 maven=org.gradle.api.plugins.MavenPlugin
 project-reports=org.gradle.api.plugins.ProjectReportsPlugin
 code-quality=org.gradle.api.plugins.quality.CodeQualityPlugin
+scala=org.gradle.api.plugins.scala.ScalaPlugin
