GRADLE-595 - Fixed jettyRun task to depend on compile and processResources, rather than compileTests.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1759 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/webApplication/quickstart/build.gradle
+++ b/src/samples/webApplication/quickstart/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'commons-lang', name: 'commons-lang', version: '2.4'
+    compile group: 'commons-io', name: 'commons-io', version: '1.4'
     compile group: 'log4j', name: 'log4j', version: '1.2.15', ext: 'jar'
 }
 
