GRADLE-571 - Added SourceSetContainer to JavaPluginConvention. - JavaPlugin adds 'main' and 'test' source sets. - Removed JavaPluginConvention.*classesDir*, use the source set classesDir instead. - Extracted AutoCreateDomainObjectContainer out of DefaultConfigurationContainer/DefaultConfigurationHandler and use this to implement SourceSetContainer.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1774 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tutorial/pluginConvention/build.gradle
+++ b/src/samples/userguide/tutorial/pluginConvention/build.gradle
@@ -1,8 +1,8 @@
 usePlugin('java')
 
 task check << {
-    classesDirName = 'output'
+    source.main.classesDir = new File(buildDir, 'output')
     println(processResources.destinationDir.name)
     println(compile.destinationDir.name)
-    println(convention.classesDirName)
+    println(convention.source.main.classesDir.name)
 }
