Renaming: Gradle -> GradleLauncher, Build  -> Gradle, Project.getBuild -> Project.getGradle
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1778 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/buildlifecycle/buildProjectEvaluateEvents/build.gradle
+++ b/src/samples/userguide/buildlifecycle/buildProjectEvaluateEvents/build.gradle
@@ -1,5 +1,5 @@
 // START SNIPPET evaluate-events
-build.afterProject {project, exception ->
+gradle.afterProject {project, exception ->
     if (exception) {
         println "Evaluation of $project FAILED"
     } else {
