--- a/src/samples/mavenRepo/build.gradle
+++ b/src/samples/mavenRepo/build.gradle
@@ -77,11 +77,11 @@ dependencies {
 
 task retrieve << {
     GradleUtil.deleteDir(buildDir)
-    GradleUtil.deleteDir(new File(build.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/$sillyexceptions"))
-    GradleUtil.deleteDir(new File(build.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/$repotest"))
-    GradleUtil.deleteDir(new File(build.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/testdep"))
-    GradleUtil.deleteDir(new File(build.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/testdep2"))
-    GradleUtil.deleteDir(new File(build.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/jaronly"))
+    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/$sillyexceptions"))
+    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/$repotest"))
+    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/testdep"))
+    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/testdep2"))
+    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/jaronly"))
     Set files = configurations.test.resolve()
     ant {
         files.each {
