- Use groovy.jar instead of groovy-all.jar, as we already have most of groovy-all.jar in $gradleHome/lib anyway. Slight modification of patch supplied by John Murph. - Renamed ScriptSource.getDebugInfo() to getFileName() - Changed StringScriptSource to use hash of script text to generate script class name.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1780 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -147,7 +147,10 @@ dependencies {
 
     userGuideStyleSheets 'docbook:docbook-xsl:1.74.3@zip'
 
-    groovy module("org.codehaus.groovy:groovy-all:1.6.4") {
+    groovy module("org.codehaus.groovy:groovy:1.6.4") {
+        dependency("asm:asm-all:2.2.3@jar")
+        dependency("antlr:antlr:2.7.7@jar")
+        dependency("commons-cli:commons-cli:1.2@jar")
         module("org.apache.ant:ant:1.7.0") {
             dependencies("org.apache.ant:ant-junit:1.7.0@jar", "org.apache.ant:ant-launcher:1.7.0@jar")
         }
