GRADLE-462 Removed dumpCommand() from the TestNG samples - cleaning up temp files.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1781 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/testng/groovy-jdk14-failing/build.gradle
+++ b/src/samples/testng/groovy-jdk14-failing/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 }
 
 test {
-   useTestNG().options.dumpCommand().suiteXmlBuilder().suite(name: 'testing-testng') {
+   useTestNG().options.suiteXmlBuilder().suite(name: 'testing-testng') {
         test (name : 'testing-testng', annotations : 'javadoc', verbose:'1') {
             classes {
                 'class' (name: 'org.gradle.BadTest')
