--- a/src/samples/testng/groovy-jdk14-passing/build.gradle
+++ b/src/samples/testng/groovy-jdk14-passing/build.gradle
@@ -20,5 +20,5 @@ dependencies {
 }
 
 test {
-   useTestNG().options.dumpCommand().javadocAnnotations() 
+   useTestNG().options.javadocAnnotations() 
 }
