--- a/src/samples/testng/java-jdk14-passing/build.gradle
+++ b/src/samples/testng/java-jdk14-passing/build.gradle
@@ -18,5 +18,5 @@ dependencies {
 }
 
 test {
-   useTestNG().options.dumpCommand().javadocAnnotations() 
+   useTestNG().options.javadocAnnotations() 
 }
