GRADLE-571 - Moved more stuff from JavaPluginConvention to SourceSet. - Changed JavaPlugin to add compileNnn and processNnnResources for each source set nnn in the project. - Renamed compileTests task -> compileTest, for consistency.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1783 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/ivypublish/build.gradle
+++ b/src/samples/ivypublish/build.gradle
@@ -16,7 +16,9 @@ repositories {
 
 task sourceJar(type: Jar) {
     baseName = 'ivypublishSource'
-    fileSet(dir: srcDirs[0])
+    source.main.java.srcDirs.each {
+        fileSet(dir: it)
+    }
 }
 
 artifacts {
