--- a/src/samples/java/onlyif/build.gradle
+++ b/src/samples/java/onlyif/build.gradle
@@ -13,7 +13,7 @@ repositories {
 
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile group: 'junit', name: 'junit', version: '4.5'
 }
 
 compile.doLast { println "compile didWork = ${compile.didWork}" }
