--- a/src/samples/logging/settings.gradle
+++ b/src/samples/logging/settings.gradle
@@ -1,1 +1,8 @@
 include 'project1', 'project2'
+
+println 'settings quiet out'
+captureStandardOutput(LogLevel.INFO)
+println 'settings info out'
+
+logger.lifecycle('settings lifecycle log')
+logger.info('settings info log')
