--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,6 +1,7 @@
 import org.apache.ivy.plugins.resolver.*
 
 usePlugin('groovy')
+usePlugin('code-quality')
 
 repositories {
     mavenCentral()
@@ -11,16 +12,18 @@ repositories {
 }
 
 dependencies {
-    compile "com.svnkit:svnkit:1.1.6", "com.svnkit:svnkit-javahl:1.1.6", 'org.hamcrest:hamcrest-core:1.1', 'org.hamcrest:hamcrest-library:1.1'
+    compile 'com.svnkit:svnkit:1.1.6', 'com.svnkit:svnkit-javahl:1.1.6'
     compile files(org.gradle.util.BootstrapUtil.gradleClasspath)
     // todo Actually it should be only groovy, but without junit we get a strange error. We need to understand this.
     groovy files(org.gradle.util.BootstrapUtil.groovyFiles)
 }
 
-test {
-    // We set forkmode to ONCE as our tests are written in Groovy and the startup time of Groovy is significant.
-    options.fork(forkMode: org.gradle.api.tasks.testing.ForkMode.ONCE)
-}
+checkstyleConfigDir = "$rootDir/../config/checkstyle"
+checkstyleConfigFileName = new File(checkstyleConfigDir, 'checkstyle.xml')
+codeNarcConfigFileName = "$rootDir/../config/codenarc.xml"
+[checkstyle, checkstyleTests].each { it.properties.checkstyleConfigDir = checkstyleConfigDir }
+
+uploadArchivesInternal.dependsOn check, test
 
 task ide << {
     def libDir = file('lib')
