--- a/performanceTest/build.gradle
+++ b/performanceTest/build.gradle
@@ -1,8 +1,8 @@
 import org.gradle.api.DefaultTask
-import org.gradle.api.Project
 import groovy.text.SimpleTemplateEngine
 import org.gradle.api.artifacts.Configuration
 import org.gradle.api.internal.artifacts.dependencies.DefaultExternalModuleDependency
+import org.gradle.api.tasks.TaskAction
 
 buildscript {
     repositories {
@@ -36,11 +36,7 @@ class GeneratorTask extends DefaultTask {
     int sourceFiles = 1
     int projects = 1
 
-    public GeneratorTask(Project project, String name) {
-        super(project, name)
-        doFirst(this.&generate)
-    }
-
+    @TaskAction
     private void generate() {
         ant.delete(dir: destDir)
         destDir.mkdirs()
