GRADLE-561 Improved build script to use different ant properties in the two tasks.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1810 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tutorial/antChecksumWithMethod/build.gradle
+++ b/src/samples/userguide/tutorial/antChecksumWithMethod/build.gradle
@@ -1,14 +1,14 @@
 task checksum << {
     fileList('../antChecksumFiles').each { File file ->
-        ant.checksum(file: file, property: file.name)
-        println "$file.name Checksum: ${ant.properties[file.name]}"
+        ant.checksum(file: file, property: "cs_$file.name")
+        println "$file.name Checksum: ${ant.properties["cs_$file.name"]}"
     }
 }
 
 task length << {
     fileList('../antChecksumFiles').each { File file ->
-        ant.length(file: file, property: file.name)
-        println "$file.name Length: ${ant.properties[file.name]}"
+        ant.length(file: file, property: "lt_$file.name")
+        println "$file.name Length: ${ant.properties["lt_$file.name"]}"
     }
 }
 
